--- a/app/assets/stylesheets/_header.css.sass
+++ b/app/assets/stylesheets/_header.css.sass
@@ -4,8 +4,6 @@
 @import "typography"
 @import "margins"
 
-$break  : 945px //min-size trigger for layout change
-$barbrk : 657px //min-size trigger for color bar expansion
 
 #header
   @extend %rough
@@ -71,8 +69,8 @@ $barbrk : 657px //min-size trigger for color bar expansion
       top             : 1.3em
     text-align        : left
     font:
-      size            : 15px
-      size            : 1.3rem
+      size            : 12px
+      size            : 1.2rem
 
 .menu
   @include col(1, 1, $m, $g)
