--- a/app/assets/stylesheets/_margins.css.sass
+++ b/app/assets/stylesheets/_margins.css.sass
@@ -2,6 +2,8 @@ $m            : 3% //margin for small screens
 $g            : 5% //gutter for small screens
 $ml           : 10% //margin for large screens
 $gl           : 5% //gutter for large screens
+$break        : 945px //min-size trigger for layout change
+$barbrk       : 657px //min-size trigger for color bar expansion
 
 
 $webkit_retna : '(-webkit-min-device-pixel-ratio: 1.5)'
